--- a/Kwitter.css
+++ b/Kwitter.css
@@ -7,4 +7,9 @@ body {
 }
 #img{
     width: 20%;
+    border-radius: 100%;
+}
+.header
+{
+	color: white;font-family: 'Yeon Sung';font-size: 45px;letter-spacing: 10px;margin-top: 80px;
 }
